webby webby. This website is nearly production-ready

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,9 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-redirect-from # https://github.com/jekyll/jekyll-redirect-from
+  - jemoji
+  - jekyll-mentions
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
