--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,14 @@
 title: Carter Tomlenovich
 email: cartertom@tuta.io
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hey! My name is Carter Tomlenovich, on the internet I go by Hyperlisk. I enjoy programming and
+  recording music. This website is all about my programming experience and contains a few things I need and
+  hopefully other things that some other people might find cool. A tutorial for a few languages, some mistakes
+  I've make along the way and some interesting things I have encoutered are going to be/have been documented on this site.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: hyperliskdev
+github_username:  retrax24
 
 # Build settings
 markdown: kramdown
