--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: hyperliskdev
-github_username:  retrax24
+github_username:  hyperliskdev
 
 # Build settings
 markdown: kramdown
